# amazon-inventory-forecasting

./: .gitignore  README.md  build.py  pyproject.toml
app/: dashboard.py
ingest/: config.py  forecast.py  generate_data.py  reorder.py
tests/: test_pipeline.py
